# PolSARpro

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  environment.yaml  mkdocs.yml  polsarpro-dev.code-workspace  pyproject.toml
.devcontainer/: devcontainer.json
Soft/: requirements.txt
data/: sample_labels_sf_alos1.nc
docs/: Freeman_theory.html  Refined_Lee_theory.html  Van_Zyl_1992_theory.html  Wishart_H_A_Alpha_theory.html  Wishart_supervised_theory.html  Yamaguchi_3_theory.html  Yamaguchi_4_theory.html  classification.md  decompositions.md  dubois-surface-inversion-tutorial.ipynb  freeman-tutorial.ipynb  h-a-alpha-tutorial.ipynb  h_a_alpha_for_docs.html  io.md  maap-biomass-stac-api.ipynb  manual-labeling-tutorial.ipynb  physical_inversion.md  pwf-tutorial.ipynb  quickstart-tutorial.ipynb  refined-lee-tutorial.ipynb  speckle_filters.md  theory.md  tsvm-tutorial.ipynb  util.md  vanzyl-tutorial.ipynb  wishart-h-a-alpha-tutorial.ipynb  wishart-supervised-tutorial.ipynb  yamaguchi3-tutorial.ipynb  yamaguchi4-tutorial.ipynb
notebooks/: ALOS1-prototype-data-reader-Dataset.ipynb  ALOS1-prototype-data-reader.ipynb  biomass-demo-polinsar26.ipynb  cameron-tutorial.ipynb  dubois-surface-inversion-tutorial.ipynb  explore-L1-data-readers.ipynb  freeman-tutorial copy.ipynb  freeman-tutorial.ipynb  h-a-alpha-tutorial.ipynb  maap-biomass-stac-api.ipynb  manual-labeling-tutorial.ipynb  pwf-tutorial.ipynb  quickstart-tutorial.ipynb  refined-lee-tutorial.ipynb  test-freeman-real-data.ipynb  test-h-a-alpha-real-data.ipynb  test-xarray-functions.ipynb  tsvm-tutorial.ipynb  vanzyl-tutorial.ipynb  wishart-h-a-alpha-tutorial.ipynb  wishart-supervised-tutorial.ipynb  yamaguchi3-tutorial.ipynb  yamaguchi4-tutorial.ipynb
old_files/: README
old_tests/: test_decompositions.py
polsarpro/: auxil.py  classification.py  classification_dev.py  decompositions.py  devtools.py  io.py  physical_inversion.py  speckle_filters.py  util.py
scripts/: Compil_PolSARpro_Biomass_Edition_Linux.sh  PolSARpro_v6.0.3_Biomass_Edition_Linux_Installation.sh  (+4 more)
(+255 files in other folders)
