[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "polsarpro"
version = "2025.12.1"
description = "Re-implementation of selected PolSARpro functions in Python, following the scientific recommendations of PolInSAR 2021."
requires-python = ">=3.12" 
dependencies = ["pandas", "xarray", "dask", "scipy"]
[[project.authors]]
name = "Olivier D'Hondt"
email = "dhondt.olivier@gmail.com"

[project.optional-dependencies]
netcdf = ["netcdf4"]
plotting = ["matplotlib"]

[tool.setuptools]
packages = [ "polsarpro"]
include-package-data = true
