[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "polsarpro"
version = "2026.1.2"
description = "Re-implementation of selected PolSARpro functions in Python, following the scientific recommendations of PolInSAR 2021."
requires-python = ">=3.12" 
dependencies = ["gdal", "rasterio", "geopandas", "pandas", "xarray", "netcdf4", "rioxarray", "dask", "bottleneck", "jupyter", "zarr", "pyyaml"]
[[project.authors]]
name = "Olivier D'Hondt"
email = "dhondt.olivier@gmail.com"

[tool.setuptools]
packages = [ "polsarpro"]
include-package-data = true
